# log_publisher

./: README.md  TODO.md  Try.py  logp.py  package_setup_example.py  pyproject.toml  usage_Example.py
Tests/: tcpclient.py  testcon.py
Tests/servers/: ioserver.py  rest.py  tcp.py  udp.py  websocserver.py
log_publisher/: log_publisher.py  main.py
log_publisher/modules/: connection.py
